k8s/base/bff.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff
  namespace: messager
spec:
  selector:
    app: bff
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
  namespace: messager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: workload
                    operator: In
                    values:
                      - app
      containers:
        - name: bff
          image: mablinov2704/bff:latest
          ports:
            - containerPort: 8080
