k8s/base/message-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-service
  namespace: messager
spec:
  selector:
    app: message-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
  namespace: messager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-service
  template:
    metadata:
      labels:
        app: message-service
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: workload
                    operator: In
                    values:
                      - app
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: disk
                    operator: In
                    values:
                      - fast
      containers:
        - name: message-service
          image: mablinov2704/message-service:latest
          ports:
            - containerPort: 8082
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: message-uploads-pvc
