k8s/base/uploads-minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: uploads.minio
  namespace: messager
spec:
  type: ExternalName
  externalName: minio.messager.svc.cluster.local
  ports:
    - port: 9000
